Build app-image on JDK 21 for appli-silicon